platform/minio/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minio-s3
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`s3.k8s.tss.local`)
      services:
        - name: minio
          port: 443
  tls:
    passthrough: true

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minio-console
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`minio.k8s.tss.local`)
      services:
        - name: minio-console
          port: 9443
  tls:
    passthrough: true
