platform/minio/resources/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-default-deny-ingress
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-allow-internal
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-allow-operator
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio-operator

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-allow-gitlab
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector:
    matchLabels:
      v1.min.io/tenant: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      ports:
        - protocol: TCP
          port: 9000

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-allow-traefik
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector:
    matchLabels:
      v1.min.io/tenant: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-allow-monitoring
  namespace: minio-system
  labels:
    app.kubernetes.io/part-of: object-storage
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector:
    matchLabels:
      v1.min.io/tenant: minio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9000
